--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-title:Alexandre Daly's Resume
+<html lang="en" style="width:100%; height:100%;">
+<head>
+  <title>Alex Daly's Resume</title>
+</head>
+  <body style="width:100%; height:100%; margin:0;">
+    <iframe src="https://github.com/azdaly/Resume/raw/master/Alexandre_Daly_Resume.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+  </body>
+</html>
